--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
   max-width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  background-color: #868e96;
+  background-color: #ECF9E6;
 }
 
 .header ul {
